tests/parser/bad/type_t-cid-tid-with.scilla
scilla_version 0

library TestLib

(* there is an extra argument *)
let f = tfun 'A => fun (x: Option 'A extra) => x
let m = True

contract Test
()
